Fix dropdown menu-right aligned

--- a/style.css
+++ b/style.css
@@ -1,8 +1,89 @@
+#name{
+  float: left;
+  font-family: 'Permanent Marker', cursive;
+  color: black;
+  font-size: 400%;
+  /* width: 80vw; */
+}
+
+
 body{
   text-align: center;
-  color: gray;
+  font-family: 'Special Elite', cursive;
+  /* font-size: 100%; */
+  /* width: 75vmin; */
+}
 
-#about {
-  background-color: gray;
+
+h2 {
+  font-size: 120%;
+}
+
+/* Style The Dropdown Button */
+.dropbtn {
+  background-color: #4CAF50;
   color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  /* position: relative; */
+  float: right;
+  display: inline-block;
+  font-family: 'Special Elite', cursive;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  right: 0;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+
+.list li {
+ background: grey;
+ display: inline-block;
+ color: white;
+}
+a{color:white;
+}
+
+.myimages {
+  width:400px; /* you can use % */
+  height: auto;
+}
+
+
+.form-item {
+
 }
